adds channels service and controller scripts to index.html

--- a/app/index.html
+++ b/app/index.html
@@ -50,8 +50,11 @@
     <script src="app.js"></script>
     <script src="auth/auth.controller.js"></script>
     <script src="auth/auth.service.js"></script>
-    <script src="users/users.service.js"></script>
     <script src="users/profile.controller.js"></script>
+    <script src="users/users.service.js"></script>
+    <script src="users/channels.controller.js"></script>
+    <script src="users/channels.service.js"></script>
+
     <!-- endbuild -->
 </body>
 </html>
