adds ng-repeat to list all channels

--- a/app/channels/index.html
+++ b/app/channels/index.html
@@ -9,6 +9,9 @@
       <div class="list-head">
         Channels
       </div>
+      <div class="channel" ng-repeat="channel in channelsCtrl.channels">
+        <a># {{ channel.name }}</a>      
+      </div>
     </div>
 
     <div class="my-info">
@@ -30,5 +33,5 @@
   <div class="message-pane">
     <ui-view></ui-view>
   </div>
-  
+
 </div>
