--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,8 @@
     <script src="users/users.service.js"></script>
     <script src="channels/channels.controller.js"></script>
     <script src="channels/channels.service.js"></script>
+    <script src="channels/messages.controller.js"></script>
+    <script src="channels/messages.service.js"></script>
 
     <!-- endbuild -->
 </body>
