changes 'template' to 'templateUrl' on channels.messages state

--- a/app/channels/index.html
+++ b/app/channels/index.html
@@ -10,7 +10,7 @@
         Channels
       </div>
       <div class="channel" ng-repeat="channel in channelsCtrl.channels">
-        <a># {{ channel.name }}</a>
+        <a ui-sref="channels.messages({ channelId: channel.$id })"># {{ channel.name }}</a>
       </div>
 
       <div class="channel create">
