--- a/app/channels/messages.html
+++ b/app/channels/messages.html
@@ -6,7 +6,7 @@
   <img class="user-pic" ng-src="{{ channelsCtrl.getGravatar(message.uid) }}">
   <div class="message-info">
     <div class="user-name">
-      {{ channelsCtrl.getDisplayName(message.uid) }}
+      {{ channelsCtrl.displayName(message.uid) }}
       <span class="timestamp">{{ message.timestamp | date: 'short' }}</span>
     </div>
     <div class="message">
@@ -17,9 +17,9 @@
 
 <form class="message-form" ng-submit="messagesCtrl.sendMessage()">
   <div class="input-group">
-    <input type="text" ng-model="messagesCtrl.message" placeholder="Type a message...">
+    <input type="text" class="form-control" ng-model="messagesCtrl.message" placeholder="Type a message...">
     <span class="input-group-btn">
       <button class="btn btn-default"type="submit">Send</button>
     </span>
-  </div>  
+  </div>
 </form>
