adds users list to sidebar on channels index.html

--- a/app/channels/index.html
+++ b/app/channels/index.html
@@ -10,11 +10,25 @@
         Channels
       </div>
       <div class="channel" ng-repeat="channel in channelsCtrl.channels">
-        <a ui-sref="channels.messages({ channelId: channel.$id })" ui-sref-active="selected"># {{ channel.name }}</a>
+        <a ui-sref="channels.messages({ channelId: channel.$id })"
+           ui-sref-active="selected">
+           # {{ channel.name }}
+        </a>
       </div>
 
       <div class="channel create">
         <a ui-sref="channels.create">+ create channel</a>
+      </div>
+
+      <div class="list-head">
+        Direct Messages
+      </div>
+      <div class="channel" ng-repeat="user in channelsCtrl.users">
+        <a ng-if="user.$id !== channelsCtrl.profile.$id"
+           ui-sref="channels.direct({uid: user.$id})"
+           ui-sref-active="selected">
+          {{ user.displayName }}
+        </a>
       </div>
     </div>
 
