--- a/app/channels/index.html
+++ b/app/channels/index.html
@@ -27,6 +27,7 @@
         <a ng-if="user.$id !== channelsCtrl.profile.$id"
            ui-sref="channels.direct({uid: user.$id})"
            ui-sref-active="selected">
+           <span class="presence" ng-class="{online: user.online}"></span>
           {{ user.displayName }}
         </a>
       </div>
@@ -36,6 +37,7 @@
       <img class="user-pic" ng-src="{{ channelsCtrl.getGravatar(channelsCtrl.profile.$id) }}">
       <div class="user-info">
         <div class="user-name">
+          <span class="presence" ng-class="{online: channelsCtrl.profile.online}"></span>
           {{ channelsCtrl.profile.displayName }}
         </div>
 
